--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    height: 100vh;
+    height: var(--viewport-height);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,7 +29,7 @@ body{
 }
 .watch{
     height: 10rem;
-    width: 26rem;
+    width: 28rem;
     padding: 15px;
     padding-left: 20px;
     border-radius: 58px;
